--- a/css/badtrash.css
+++ b/css/badtrash.css
@@ -1,26 +1,20 @@
 /*
     author: Andres Guzman (andres@camino.bo)
-    date: February, 2017
+    date: April, 2018
 */
 
 /* fonts
 --------------------------------------------------------------------------*/
 
 @font-face {
-    font-family: '8 bit 16';
-    src: url('fonts/8bit16/8bit16-webfont.woff2') format('woff2'), 
-         url('fonts/8bit16/8bit16-webfont.woff') format('woff');
+    font-family: 'Proxima Nova Regular';
+    src: url('fonts/proxima/proximanova-regular-webfont.woff2') format('woff2'),
+         url('fonts/proxima/proximanova-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+
 }
 
-@font-face {
-    font-family: 'Apple';
-    src: url('fonts/apple/apple_-webfont.woff2') format('woff2'),
-         url('fonts/apple/apple_-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
 
 /* css reset
 --------------------------------------------------------------------------*/
@@ -74,445 +68,149 @@ html {
 
 body {
     line-height: 1;
-    display: flex;
     min-height: 100%;
+    display: flex;
     flex-direction: column;
-    background-color: #111111;
+    background-color: #f9fafc;
 }
 
 /* all styles
 --------------------------------------------------------------------------*/
 
-header {
-    padding: 30px 0 30px 0;
+.logo-thunder {
+    fill:#FFFFFF;
 }
 
-#header-wrapper {
-    max-width: 741px;
-    margin: 0 auto;
-    -moz-border-image: -moz-linear-gradient(left, #0f97ee 0%, #6d37c7 100%);
-    -webkit-border-image: -webkit-linear-gradient(left, #0f97ee 0%, #6d37c7 100%);
-    border-image: linear-gradient(to right, #0f97ee 0%, #6d37c7 100%);
-    border-image-slice: 1;
-    border-style: solid;
-    border-bottom-width: 2px;
-    border-bottom-style: solid;
+.logo-text {
+    fill: #F51751;
+}
+
+header {
+    text-align: center;
+    padding-top: 30px;
+    margin-bottom: 30px;
+}
+
+header #logo {
+    display: block;
+    width: 95px;
+    height: 70px;
+    margin: 0 auto 20px auto;
+    padding: 10px;
+    box-sizing: border-box;
+    transition: padding .35s ease 0s;
+}
+
+header #logo:hover {
+    padding: 5px;
 }
 
 h1 {
-    font: 26px/18px "8 bit 16", sans-serif;
-    margin-bottom: 26px;
+    max-width: 460px;
+    margin: 0 auto;
+    color: #808da0;
+    font: 12px "Proxima Nova Regular", sans-serif;
 }
 
-h1 a {
-    color: #ffffff;
-    text-decoration: none;    
-    transition: all  600ms ease 0s;
+.is-hidden {
+    display: none;
 }
 
-h1:hover a {
-    color: #111111;
-    background: #ffffff;
-    padding: 6px;
-}
-
-#welcome-text {
-    color: #5034e1;
-    font: 12px "Montserrat Light", sans-serif;
-}
-
-#about {
-    color: rgba(255, 255, 255, 1);
-    font: 8px "Apple", sans-serif;
-    text-transform: uppercase;
-    margin-bottom: 18px;
-}
-
-footer a {
-    color: #ffffff;
-    text-decoration: underline;
-    transition: all 600ms ease 0s;
-}
-
-footer a:hover {
-    color: #000000;
-    background-color: #0fffff;
-}
-
-#image-window {
-    flex: 1;
+main {
     position: relative;
+    flex: 1;
     text-align: center;
-    padding: 25px 40px;
-}
-
-#stats {
-    position: absolute;
-    top: -10px;
-    left: 50%;
-    transform: translateX(-50%);
-    color: rgba(0, 0, 0, 1);
-    font: 8px/6px "Apple", sans-serif;
-    background-color: #ffffff;
-    padding: 6px 4px 3px 4px;
-}
-
-#stats span {
-    margin-right: 12px;
+    padding-bottom: 116px;
 }
 
 .count {
     display: inline-block;
-    padding: 5px;
-    min-width: 50px;
-    min-height: 50px;
-    background: rgba(0,0,0,0.35) url(../img/preloader.svg) center center no-repeat;
-    background-size: 35px;
-    box-shadow: 0 0 0px rgba(0,0,0,0.1);
-    transition: all 0.6s ease 0s;
+    padding: 11px;
+    background-color: #e4e7ec;
+    background-image: url(../img/preloader.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    min-width: 38px;
+    min-height: 38px;
+    border: 1px solid #e4e7ec;
+    border-radius: 5px;
+    box-shadow: 0 0 15px rgba(48, 57, 73, 0.13);
+    transition: all .35s ease 0s;
 }
 
 .count:hover {
-    background-color: #ffffff;
-    box-shadow: 0 0 10px rgba(0,0,0,0.45);
+    background-color: #FFFFFF;
+}
+
+#stats {
+    position: absolute;
+    bottom: 30px;
+    left: 0;
+    width: 100%;
+}
+
+#stats #stats-innard {
+    background-color: #FFFFFF;
+    padding: 19px;
+    display: inline-block;
+    border: 1px solid #e4e7ec;
+    border-radius: 5px;
+    box-shadow: 0 0 15px rgba(48, 57, 73, 0.13);
+    color: #808da0;
+    font: 12px "Proxima Nova Regular", sans-serif;
 }
 
 #random-image {
     width: 100%;
-    animation-name: fadeIn;
-    animation-iteration-count: 1;
-    animation-timing-function: cubic-bezier(0.250, 0.460, 0.450, 0.940);
-    animation-duration: 600ms;
-    margin-bottom: -2px;
 }
 
 footer {
-    color: #ffffff;
-    width: 741px;
-    margin: 0 auto;
-    font: 8px "Apple", sans-serif;
-    text-transform: uppercase;
-    padding: 19px 0;
-    box-sizing: border-box;
-    -moz-border-image: -moz-linear-gradient(left, #0f97ee 0%, #6d37c7 100%);
-    -webkit-border-image: -webkit-linear-gradient(left, #0f97ee 0%, #6d37c7 100%);
-    border-image: linear-gradient(to right, #0f97ee 0%, #6d37c7 100%);
-    border-image-slice: 1;
-    border-top-style: solid;
-    border-top-width: 2px;
+    text-align: center;
+    background-color: #e4e7ea;
+    padding: 40px;
+    color: #808da0;
+    font: 12px "Proxima Nova Regular", sans-serif;
 }
 
-footer span {
-    font: 11px "8 bit 16", sans-serif;
+footer .copy { 
+    margin-bottom: 30px;
 }
 
-.server-info {
-    padding-top: 15px;
-    color: rgba(255, 255, 255, 0.3);
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+footer .copy a {
+    color: #808da0;
 }
-
 
 /* error pages
 --------------------------------------------------------------------------*/
 
-.error {
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    background-color: #010101;
-    background-image: url(../img/pixels_now.gif), url(../img/house_dark.jpg), url(../img/loading.gif);
-    background-position: center center, center center, center center;
-    background-repeat: repeat, no-repeat, repeat;
-    background-attachment: fixed, fixed, scroll;
-    background-size: auto, cover, auto;
-}
-
-.error-holder {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.error-holder h1 {
-    color: #ffffff;
-    margin-right: 0;
-    margin-bottom: 16px;
-}
-
-.error-holder h2 {
-    color: #ffffff;
-    font: 8px "Apple", sans-serif;
-    margin-bottom: 16px;
-}
-
-.error-p {
-    color: #ffffff;
-    font: 8px "Apple", sans-serif;
-}
-
-.error-a {
-    color: #ffffff;
-    font: 8px "Apple", sans-serif;
-    transition: color 0.35s ease 0s;
-}
-
-.error-a:hover {
-    color: #ff2b6e;
-}
-
-
-.glitch {
-    color: white;
-    margin: 0 auto;
-}
-
-/* Real glitch effect */
-.glitch {
-    position: relative;
-}
-
-.glitch:after {
-    animation: glitch-animation 3s infinite linear alternate-reverse;
-    background: black;
-    clip: rect( 0, 900px, 0, 0 );
-    color: white;
-    content: attr( data-text );
-    left: 2px;
-    overflow: hidden;
-    position: absolute;
-    text-shadow: -1px 0 red;
-    top: 0;
-}
-
-.glitch:before {
-    animation: glitch-animation-2 3s infinite linear alternate-reverse;
-    background: black;
-    clip: rect( 0, 900px, 0, 0 );
-    color: white;
-    content: attr( data-text );
-    left: -2px;
-    overflow: hidden;
-    position: absolute;
-    text-shadow: 1px 0 blue;
-    top: 0;
-}
-/* Expanded Animations */
-@keyframes glitch-animation {
-    0% {
-        clip: rect(42px, 9999px, 44px, 0);
-    }
-
-    5% {
-        clip: rect(12px, 9999px, 59px, 0);
-    }
-
-    10% {
-        clip: rect(48px, 9999px, 29px, 0);
-    }
-
-    15.0% {
-        clip: rect(42px, 9999px, 73px, 0);
-    }
-
-    20% {
-        clip: rect(63px, 9999px, 27px, 0);
-    }
-
-    25% {
-        clip: rect(34px, 9999px, 55px, 0);
-    }
-
-    30.0% {
-        clip: rect(86px, 9999px, 73px, 0);
-    }
-
-    35% {
-        clip: rect(20px, 9999px, 20px, 0);
-    }
-
-    40% {
-        clip: rect(26px, 9999px, 60px, 0);
-    }
-
-    45% {
-        clip: rect(25px, 9999px, 66px, 0);
-    }
-
-    50% {
-        clip: rect(57px, 9999px, 98px, 0);
-    }
-
-    55.0% {
-        clip: rect(5px, 9999px, 46px, 0);
-    }
-
-    60.0% {
-        clip: rect(82px, 9999px, 31px, 0);
-    }
-
-    65% {
-        clip: rect(54px, 9999px, 27px, 0);
-    }
-
-    70% {
-        clip: rect(28px, 9999px, 99px, 0);
-    }
-
-    75% {
-        clip: rect(45px, 9999px, 69px, 0);
-    }
-
-    80% {
-        clip: rect(23px, 9999px, 85px, 0);
-    }
-
-    85.0% {
-        clip: rect(54px, 9999px, 84px, 0);
-    }
-
-    90% {
-        clip: rect(45px, 9999px, 47px, 0);
-    }
-
-    95% {
-        clip: rect(37px, 9999px, 20px, 0);
-    }
-
-    100% {
-        clip: rect(4px, 9999px, 91px, 0);
-    }
-}
-
-@keyframes glitch-animation-2 {
-    0% {
-        clip: rect(65px, 9999px, 100px, 0);
-    }
-
-    5% {
-        clip: rect(52px, 9999px, 74px, 0);
-    }
-
-    10% {
-        clip: rect(79px, 9999px, 85px, 0);
-    }
-
-    15.0% {
-        clip: rect(75px, 9999px, 5px, 0);
-    }
-
-    20% {
-        clip: rect(67px, 9999px, 61px, 0);
-    }
-
-    25% {
-        clip: rect(14px, 9999px, 79px, 0);
-    }
-
-    30.0% {
-        clip: rect(1px, 9999px, 66px, 0);
-    }
-
-    35% {
-        clip: rect(86px, 9999px, 30px, 0);
-    }
-
-    40% {
-        clip: rect(23px, 9999px, 98px, 0);
-    }
-
-    45% {
-        clip: rect(85px, 9999px, 72px, 0);
-    }
-
-    50% {
-        clip: rect(71px, 9999px, 75px, 0);
-    }
-
-    55.0% {
-        clip: rect(2px, 9999px, 48px, 0);
-    }
-
-    60.0% {
-        clip: rect(30px, 9999px, 16px, 0);
-    }
-
-    65% {
-        clip: rect(59px, 9999px, 50px, 0);
-    }
-
-    70% {
-        clip: rect(41px, 9999px, 62px, 0);
-    }
-
-    75% {
-        clip: rect(2px, 9999px, 82px, 0);
-    }
-
-    80% {
-        clip: rect(47px, 9999px, 73px, 0);
-    }
-
-    85.0% {
-        clip: rect(3px, 9999px, 27px, 0);
-    }
-
-    90% {
-        clip: rect(26px, 9999px, 55px, 0);
-    }
-
-    95% {
-        clip: rect(42px, 9999px, 97px, 0);
-    }
-
-    100% {
-        clip: rect(38px, 9999px, 49px, 0);
-    }
-}
 
 
 /* media queries
 --------------------------------------------------------------------------*/
 
-@media only screen and (max-width: 720px) {
-    
-    #header-wrapper {
-        text-align: center;
+@media only screen and (max-width: 480px) {
+    header {
+        display: flex;
+        padding: 15px;
+        margin-bottom: 0;
+        align-items: center;
+        justify-content: center;
     }
 
-    header {
-        padding: 25px 0;
+    header #logo {
+        margin: auto;
     }
 
     h1 {
-        margin-right: 0;
+        text-align: left;
+        margin-left: 25px;
     }
 
-    #welcome-text {
+    .is-hidden {
+        display: inline;
+    }
+
+    .is-visible {
         display: none;
-    }
-
-    #counter {
-        display: none;
-    }
-
-    #stats {
-        display: none;
-    }
-
-    #image-window {
-        padding-top: 0;
-        padding-bottom: 25px;
-    }
-
-    footer {
-        text-align: center;
-        width: auto;
-        margin: 0;
     }
 }
