--- a/css/badtrash.css
+++ b/css/badtrash.css
@@ -12,7 +12,7 @@
          url('fonts/proxima/proximanova-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
+    font-display: swap;
 }
 
 
@@ -109,7 +109,7 @@ h1 {
     max-width: 460px;
     margin: 0 auto;
     color: #808da0;
-    font: 12px "Proxima Nova Regular", sans-serif;
+    font: 12px "Proxima Nova Regular", Arial, Helvetica, sans-serif;
 }
 
 .is-hidden {
@@ -157,7 +157,7 @@ main {
     border-radius: 5px;
     box-shadow: 0 0 15px rgba(48, 57, 73, 0.13);
     color: #808da0;
-    font: 12px "Proxima Nova Regular", sans-serif;
+    font: 12px "Proxima Nova Regular", Arial, Helvetica, sans-serif;
 }
 
 #random-image {
@@ -169,7 +169,7 @@ footer {
     background-color: #e4e7ea;
     padding: 40px;
     color: #808da0;
-    font: 12px "Proxima Nova Regular", sans-serif;
+    font: 12px "Proxima Nova Regular", Arial, Helvetica, sans-serif;
 }
 
 footer .copy { 
