--- a/css/badtrash.css
+++ b/css/badtrash.css
@@ -152,10 +152,10 @@ main {
 
 #stats #stats-innard {
     background-color: #FFFFFF;
-    padding: 19px;
+    padding: 19px 24px;
     display: inline-block;
     border: 1px solid #e4e7ec;
-    border-radius: 5px;
+    border-radius: 40px;
     box-shadow: 0 0 15px rgba(48, 57, 73, 0.13);
     color: #808da0;
     font: 12px "Proxima Nova Regular", Arial, Helvetica, sans-serif;
