--- a/css/badtrash.css
+++ b/css/badtrash.css
@@ -1,219 +1,219 @@
 /*
-    author: Andres Guzman (andres@camino.bo)
-    date: April, 2018
+    author: Andres Guzman
+    date: june, 2020
 */
 
-/* fonts
---------------------------------------------------------------------------*/
 
 @font-face {
-    font-family: 'Proxima Nova Regular';
-    src: url('fonts/proxima/proximanova-regular-webfont.woff2') format('woff2'),
-         url('fonts/proxima/proximanova-regular-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+	font-family: "Jet";
+	src: url(css/fonts/jetbrains/JetBrainsMono-Regular.woff2) format('woff2'), url(css/fonts/jetbrains/JetBrainsMono-Regular.woff) format('woff');
+	font-weight: 400;
+	font-style: normal;
+	font-display: swap
 }
-
-
-/* css reset
---------------------------------------------------------------------------*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-
-a {
-    outline: none;
-}
-
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-
-/* basic styles
---------------------------------------------------------------------------*/
 
 ::selection {
-    background: #0fffff;
-    color: #000;
+	background: #fe0f4d;
+	color: #fff
 }
 
 ::-moz-selection {
-    background: #0fffff;
-    color: #000;
+	background: #fe0f4d;
+	color: #fff
 }
 
 html {
-    height: 100%;
+	height: 100%;
 }
 
 body {
-    line-height: 1;
-    min-height: 100%;
-    display: flex;
-    flex-direction: column;
-    background-color: #f9fafc;
+	line-height: 1;
+	height: 100vh;
+	background-color: #1a1b1e;
+	padding: 45px;
+	box-sizing: border-box;
+	cursor: url(img/cursor_default.svg) 0 0, auto
 }
 
-/* all styles
---------------------------------------------------------------------------*/
-
-.logo-thunder {
-    fill:#FFFFFF;
+body *,
+body ::after,
+body ::before {
+	cursor: inherit
 }
 
-.logo-text {
-    fill: #F51751;
+a {
+	cursor: url(img/cursor_pointer.svg) 0 0, pointer
 }
 
-header {
-    text-align: center;
-    padding-top: 30px;
-    margin-bottom: 30px;
+#container,
+main {
+	display: grid;
+	box-sizing: border-box
 }
 
-header #logo {
-    display: block;
-    width: 95px;
-    height: 70px;
-    margin: 0 auto 20px auto;
-    padding: 10px;
-    box-sizing: border-box;
-    transition: padding .35s ease 0s;
-}
-
-header #logo:hover {
-    padding: 5px;
-}
-
-h1 {
-    max-width: 460px;
-    margin: 0 auto;
-    color: #808da0;
-    font: 12px "Proxima Nova Regular", Arial, Helvetica, sans-serif;
-}
-
-.is-hidden {
-    display: none;
+#container {
+	grid-template-columns: 1fr 2fr;
+	max-width: 100vw;
+	height: 100%;
+	border: 1px solid #444
 }
 
 main {
-    position: relative;
-    flex: 1;
-    text-align: center;
-    padding-bottom: 116px;
+	justify-content: center;
+	align-content: space-between;
+	transition: all .65s ease 0s;
+	padding: 45px
 }
 
-.count {
-    display: inline-block;
-    padding: 11px;
-    background-color: #e4e7ec;
-    background-image: url(../img/preloader.svg);
-    background-position: center;
-    background-repeat: no-repeat;
-    min-width: 38px;
-    min-height: 38px;
-    border: 1px solid #e4e7ec;
-    border-radius: 5px;
-    box-shadow: 0 0 15px rgba(48, 57, 73, 0.13);
-    transition: all .35s ease 0s;
-    text-decoration: none;
+#stats,
+body {
+	margin: 0
 }
 
-.count:hover {
-    background-color: #FFFFFF;
+#stats,
+footer p,
+header p {
+	color: #6a6a6a;
+	font: 12px/20px "Jet", Arial, Helvetica, sans-serif
 }
 
-#stats {
-    position: absolute;
-    bottom: 30px;
-    left: 0;
-    width: 100%;
+#logo,
+footer p,
+header,
+header p {
+	transition: all .65s ease 0s
 }
 
-#stats #stats-innard {
-    background-color: #FFFFFF;
-    padding: 19px 24px;
-    display: inline-block;
-    border: 1px solid #e4e7ec;
-    border-radius: 40px;
-    box-shadow: 0 0 15px rgba(48, 57, 73, 0.13);
-    color: #808da0;
-    font: 12px "Proxima Nova Regular", Arial, Helvetica, sans-serif;
+#logo {
+	display: block;
+	width: 65%;
+	margin: 0 0 30px;
+	outline: 0
+}
+
+.badtrash_fill {
+	fill: #fff;
+	transition: fill .45s ease 0s
+}
+
+#logo:hover .badtrash_fill {
+	fill: #fe0f4d
+}
+
+footer p,
+header p {
+	margin: 0 0 26px
+}
+
+header .p-white {
+	color: #fff;
+	margin-bottom: 0
+}
+
+footer p {
+	margin: 0
+}
+
+#stats span,
+footer a {
+	color: #fff
+}
+
+footer a:hover {
+	color: #fe0f4d
+}
+
+#image-panel {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: #dedede;
+	box-sizing: border-box;
+	position: relative;
+	overflow: hidden
+}
+
+#button {
+	display: block;
+	min-width: 40px;
+	min-height: 40px;
+	background-image: url(../img/preloader.svg);
+	background-position: center;
+	background-repeat: no-repeat;
+	outline: 0
+}
+
+footer a {
+	transition: all .35s ease 0s
 }
 
 #random-image {
-    width: 100%;
-    color: #808da0;
-    font: 12px "Proxima Nova Regular", Arial, Helvetica, sans-serif;
+	display: block;
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	left: 50%;
+	min-height: 60px;
+	min-width: 60px;
+	max-height: 100%;
+	max-width: 100%;
+	top: 50%;
+	box-sizing: border-box;
+	transform: translate(-50%, -50%);
+	border: 8px solid #dedede;
+	box-shadow: 0 0 15px rgba(166, 166, 166, .5);
+	transition: border-color 360ms ease 0s;
 }
 
-footer {
-    text-align: center;
-    background-color: #e4e7ea;
-    padding: 40px;
-    color: #808da0;
-    font: 12px "Proxima Nova Regular", Arial, Helvetica, sans-serif;
+#random-image:hover {
+	border-color: #fff
 }
 
-footer .copy { 
-    margin-bottom: 30px;
+.is-visible {
+    display: none;
 }
 
-footer .copy a {
-    color: #808da0;
-}
-
-/* error pages
---------------------------------------------------------------------------*/
-
-
-
-/* media queries
---------------------------------------------------------------------------*/
-
-@media only screen and (max-width: 480px) {
-    header {
-        display: flex;
-        padding: 15px;
-        margin-bottom: 0;
-        align-items: center;
-        justify-content: center;
+@media screen and (max-width:940px) {
+	body {
+		height: auto;
+	}
+	body,
+	main {
+		padding: 15px
+	}
+	#logo {
+		width: 50vw;
+		margin: 0 auto 15px
+	}
+	header p {
+		text-align: center;
+		margin-bottom: 15px
+	}
+	#stats-outer,
+	footer {
+		display: none
+	}
+	#container {
+		grid-template-columns: none;
+		grid-template-rows: 1fr 3fr
+	}
+	#image-panel {
+		overflow: visible;
+		background-color: unset
+	}
+	#random-image {
+		position: relative;
+		right: unset;
+		top: unset;
+		left: unset;
+		bottom: unset;
+		transform: unset
     }
-
-    header #logo {
-        margin: auto;
-    }
-
-    h1 {
-        text-align: left;
-        margin-left: 25px;
-    }
-
-    .is-hidden {
-        display: inline;
-    }
-
-    .is-visible {
+    .p-white {
         display: none;
+    }
+    .is-visible {
+        color: #fff;
+        display: block;
     }
 }
