--- a/css/badtrash.css
+++ b/css/badtrash.css
@@ -22,6 +22,24 @@
 	color: #fff
 }
 
+@keyframes fadeOut {
+	from {
+		opacity: 1;
+	}
+
+	to {
+		opacity: 0;
+	}
+}
+
+.fade--out {
+	animation-name: fadeOut;
+	animation-duration: 0.45s;
+	animation-fill-mode: forwards;
+	animation-iteration-count: 1;
+	animation-timing-function: linear;
+}
+
 html {
 	height: 100%;
 }
@@ -137,10 +155,10 @@ footer a:hover {
 	display: block;
 	min-width: 40px;
 	min-height: 40px;
-	background-image: url(../img/preloader.svg);
+	background-image: url(img/preloader.svg);
 	background-position: center;
 	background-repeat: no-repeat;
-	outline: 0
+	outline: 0;
 }
 
 footer a {
